--- a/04_aumentoSalarial.html
+++ b/04_aumentoSalarial.html
@@ -6,6 +6,8 @@
     */
 
     //ENTRADA
+    const salarioAt = Number(prompt("Informe o seu salário atual:"))
+    const porcAum = Number(prompt("Informe a porcetagem de aumento:"))
 
     
     //PROCESSAMENTO
