--- a/06_aumentoSalarial.html
+++ b/06_aumentoSalarial.html
@@ -6,11 +6,17 @@
     */
 
     //ENTRADA
+    const salarioAt = Number(prompt("Informe o seu salário atual:"))
+    const porcAum = Number(prompt("Informe a porcetagem de aumento:"))
 
     
     //PROCESSAMENTO
+    const salFinal = porcAum * salarioAt / 100
+
 
     
     //SAÍDA
+    document.write(`Salário final: ${salFinal}R$`)
+
 
 </script>
