--- a/05_descontoPreco.html
+++ b/05_descontoPreco.html
@@ -6,11 +6,15 @@
     */
 
     //ENTRADA
+    const precoProduto = Number(prompt(`Informe o valor do produto:`))
+    let porceDescProduto = Number(prompt(`Informe qual a porcetagem de desconto do produto:`)) 
 
     
     //PROCESSAMENTO
+    const valorFinal = porceDescProduto = precoProduto * (porceDescProduto/ 100)
 
     
     //SAÍDA
+    document.write(`O valor final é: ${valorFinal}`)
 
 </script>
